-İngilizce dil desteği eklendi

--- a/app/src/main/res/layout/yemek_guncelle.xml
+++ b/app/src/main/res/layout/yemek_guncelle.xml
@@ -76,11 +76,12 @@
         android:layout_height="100dp"
         android:background="@drawable/textview_border"
         android:hint="Buraya Yazabilirsiniz..."
-        android:maxLength="300"
+        android:maxLength="450"
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:text=""
-        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        android:textAlignment="gravity"
         app:layout_constraintTop_toBottomOf="@+id/malzemelerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,16 +106,19 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@drawable/textview_border"
+        android:gravity="center_horizontal"
         android:hint="Buraya Yazabilirsiniz... "
         android:inputType="textMultiLine"
-        android:maxLength="750"
+        android:maxLength="950"
         android:scrollHorizontally="false"
         android:text=""
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiTextView"
+        android:textAlignment="gravity"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"/>
+        app:layout_constraintTop_toBottomOf="@+id/yemekTarifiTextView" />
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
