--- a/app/src/main/res/menu/yemekkaydet.xml
+++ b/app/src/main/res/menu/yemekkaydet.xml
@@ -8,28 +8,28 @@
         android:icon="@android:drawable/ic_menu_save"
         android:orderInCategory="300"
         android:title="Kaydet"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/imageAction"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_report_image"
         android:orderInCategory="300"
         android:title="Resim Ekle/Sil"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/temizleAction"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_revert"
         android:orderInCategory="300"
-        android:title="Temizle"
-        app:showAsAction="ifRoom" />
+        android:title="@string/temizle"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_search_insides"
         android:enabled="true"
         android:icon="@mipmap/pdf_round"
         android:orderInCategory="300"
-        android:title="Pdf Oluştur"
-        app:showAsAction="ifRoom" />
+        android:title="@string/pdfOlustur"
+        app:showAsAction="never" />
 
 
 
