--- a/app/src/main/res/layout/yeni_yemek_page.xml
+++ b/app/src/main/res/layout/yeni_yemek_page.xml
@@ -79,8 +79,9 @@
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
         android:text=""
-        android:textAlignment="center"
-        android:maxLength="300"
+        android:gravity="center_horizontal"
+        android:textAlignment="gravity"
+        android:maxLength="450"
         app:layout_constraintTop_toBottomOf="@+id/malzemelerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,9 +110,10 @@
         android:hint="Buraya Yazabilirsiniz..."
         android:inputType="textMultiLine"
         android:scrollHorizontally="false"
-        android:maxLength="750"
+        android:maxLength="950"
         android:text=""
-        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        android:textAlignment="gravity"
         app:layout_constraintTop_toBottomOf="@+id/yemekTarifiTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
