--- a/app/src/main/res/layout/yemek_listele.xml
+++ b/app/src/main/res/layout/yemek_listele.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -8,7 +9,33 @@
     android:background="@drawable/b1"
     android:orientation="vertical"
     tools:context="com.yemekDefteri.yemekListePage">
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/currency"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minWidth="150dp"
+        android:background="#FFFF"
+        android:layout_marginTop="15dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
+        android:hint="Search &amp; Meal Name"
+        >
 
+        <AutoCompleteTextView
+            android:id="@+id/edtCmpSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dropDownSelector="#FFFF"
+            android:textColor="#000000"
+            android:background="#FFFF"
+            android:backgroundTint="#FFFF"
+            android:textStyle="bold"
+            android:shadowColor="#FFFF"
+            android:paddingStart="8dp"
+            android:text="" />
+    </com.google.android.material.textfield.TextInputLayout>
+    <!--
     <EditText
         android:id="@+id/aramaText"
         android:layout_width="match_parent"
@@ -26,6 +53,7 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="17dp"
         tools:layout_editor_absoluteY="16dp" />
+        -->
     <ListView
         android:id="@+id/yemekListe"
         android:layout_width="match_parent"
@@ -33,5 +61,4 @@
         android:layout_margin="10dp"
         android:listSelector="#388E3C"
         android:background="#FFFFFF"></ListView>
-
 </LinearLayout>
